tdf#121926: Take metrics into account

Similar to 6d9a2557a0f0366fff169f3c3581414b3cec80bd

Change-Id: Ifecc3f86a3da8fdd4b0535cb67c6315e0d418f5a
Reviewed-on: https://gerrit.libreoffice.org/64645
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit cc797cd31e99d47db5b2815a0a86c96204a65e62)